
Issue #92   Bug/Enhancement - Mailwatch Single Recipient Release
Issue #165  Enhancement     - Upgrade MailScanner
Issue #210  Enhancement     - Add EFA Version to GUI
Issue #228  Bug             - Greylist toggle overwrites custom smtpd_recipient_restrictions
Issue #232  Enhancement     - Use CLAMAV-UNOFFICIAL-SIGS maintained by eXtremeSHOK.com
Issue #265  Enhancement     - Add per user mode for MailWatch
Issue #267  Bug             - SPAM bounce loop
Issue #275  Bug             - MailWatch updater adds duplicate SHOW_GREYLIST definitions
Issue #276  Bug             - EFA-Configure Option 11 logic error
Issue #286  Bug             - Postmaster set to empty interferes with postfix
Issue #287  Bug             - Rules without Descriptions
Issue #294  Bug             - Attachment Release Issues in MailWatch
Issue #297  Bug             - KAM.cf URL needs updated

############################################################
EFA Version 3.0.1.1 Changes
############################################################

Issue #201  Bug          - Deprecated release-msg.cgi (deployed)
Issue #253  Bug          - EFA-Backup ssl folder (deployed)
Issue #260  Bug          - Header in Apache Settings wrong (deployed)
Issue #261  Bug          - learn-msg.cgi wrong path for sa-learn (deployed)
Issue #273  Security     - MailWatch Configuration Vulnerability
Issue #274  Bug          - Broken menu options in 3.0.1.0

############################################################
EFA Version 3.0.1.0 Changes
############################################################

Issue #201  Bug          - Deprecated release-msg.cgi
Issue #236  Enhancement  - Disable spam not delivered messages by default
Issue #253  Bug          - EFA-Backup ssl folder
Issue #260  Bug          - Header in Apache Settings wrong
Issue #261  Bug          - learn-msg.cgi wrong path for sa-learn
Issue #262  Bug          - MS_LOGO and MW_LOGO Definitions Needed