@@ -42,4 +42,11 @@ CREATE TABLE bayes_vars (
   newest_token_age int(11) NOT NULL default '0',
   PRIMARY KEY  (id),
   UNIQUE bayes_vars_idx1 (username)
-) ENGINE=InnoDB;
+) ENGINE=InnoDB;CREATE TABLE txrep (username varchar(100) NOT NULL default '', \
+   email varchar(255) NOT NULL default '', \
+   ip varchar(40) NOT NULL default '', \
+   count int(11) NOT NULL default '0', \
+   totscore float NOT NULL default '0', \
+   signedby varchar(255) NOT NULL default '', \
+   PRIMARY KEY (username,email,signedby,ip) \
+   ) ENGINE=InnoDB;"
